# pfix

./: .env.example  .gitignore  .pre-commit-hooks.yaml  .vallm.yaml  CHANGELOG.md  LIBRARY_INTEGRATION.md  LICENSE  Makefile  PKG-INFO  README.md  TODO.md  Taskfile.yml  app.doql.css  app.doql.less  goal.yaml  index.html  mcp-config.json  planfile.yaml  project.sh  pyproject.toml  pyqual.yaml  redsl_refactor_plan.md  redsl_refactor_plan.toon.yaml  redsl_refactor_report.md  redsl_refactor_report.toon.yaml  requirements.txt  verify_runtime.py
.pyqual/: coverage.json  llx_history.jsonl  pipeline.db
.redsl/: chat.jsonl  history.jsonl
.taskill/: state.json
docs/: README.md
examples/: README.md  demo.py  demo1.py  demo_auto.py  reset.py  run_all.py  shared.py
examples/.pfix_backups/: demo.py.20260328_192530.bak  demo.py.20260328_192533.bak  demo.py.20260328_193242.bak  demo.py.20260328_194005.bak  demo.py.20260328_194024.bak  demo_auto.py.20260328_194219.bak  demo_auto.py.20260328_194608.bak  demo_auto.py.20260328_194631.bak
examples/complex_demo/: README.md  main.py  pyproject.toml
examples/complex_demo/data/: users.csv
examples/concurrency/: README.md  async_mistakes.py  main.py  pyproject.toml  race_conditions.py
examples/data/: README.md  main.py  numeric_errors.py  parse_errors.py  pyproject.toml
examples/edge_cases/: README.md  class_errors.py  main.py  pyproject.toml  python_gotchas.py  tricky_errors.py
examples/encoding/: README.md  codec_errors.py  main.py  pyproject.toml  unicode_errors.py
examples/environment/: README.md  env_var_errors.py  main.py  pyproject.toml  venv_issues.py
examples/filesystem/: README.md  file_errors.py  main.py  pyproject.toml
examples/getting_started/: README.md  main.py  pyproject.toml
examples/imports/: README.md  circular.py  main.py  missing_module.py  platform_specific.py  pyproject.toml  shadowing.py  wrong_names.py
examples/memory/: README.md  main.py  pyproject.toml  recursion_and_alloc.py
examples/network/: README.md  main.py  pyproject.toml
examples/production/: README.md  api_patterns.py  cascading_errors.py  degradation.py  main.py  pyproject.toml
examples/types/: README.md  attribute_errors.py  main.py  pattern_errors.py  pyproject.toml  type_errors.py
project/: README.md  analysis.toon.yaml  calls.mmd  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
src/pfix/: __init__.py  _auto_activate.py  analyzer.py  audit.py  auto_activate.pth  cache.py  classifiers.py  cli.py  config.py  dashboard.py  decorator.py  decorator.py.bak  dependency.py  dev_mode.py  diff_fixer.py  explain.py  fixer.py  init_wizard.py  llm.py  logging.py  mcp_client.py  mcp_server.py  multi_fix.py  permissions.py  pfix_python.py  production.py  rollback.py  rules.py  runtime_todo.py  session.py  syntax_error_handler.py  telemetry.py  types.py  validation.py
src/pfix/commands/: activation.py  config.py  diagnose.py  others.py  run.py
src/pfix/env_diagnostics/: __init__.py  auto_fix.py  base.py  concurrency.py  config_env.py  encoding.py  filesystem.py  hardware.py  import_diagnostic.py  imports.py  memory.py  network.py  paths.py  process.py  python_version.py  serialization.py  third_party.py  venv.py
src/pfix/env_diagnostics/imports/: __init__.py  checks.py  extractor.py  graph_builder.py
src/pfix/integrations/: __init__.py  precommit.py  pytest_plugin.py  sentry.py  web.py
src/pfix/runtime_todo/: __init__.py  collector.py  fingerprint.py  todo_file.py
src/pfix/strategies/: __init__.py  django.py  fastapi.py  flask.py  pandas.py
tests/: audit_tests.py  cache_tests.py  hardware_diagnostic_tests.py  permissions_tests.py  rollback_tests.py  rules_tests.py  telemetry_tests.py  test_analyzer.py  test_audit.py  test_cache.py  test_cli.py  test_concurrency_diagnostic.py  test_config.py  test_decorator.py  test_dependency.py  test_diagnostics.py  test_fixer.py  test_hardware_diagnostic.py  test_llm.py  test_llm_parsing.py  test_new_modules.py  test_permissions.py  test_pfix.py  test_rollback.py  test_rules.py  test_serialization_diagnostic.py  test_telemetry.py
tests/test_new_modules_pkg/: __init__.py  shared.py  test_audit_permissions_telemetry_rollback_rules_cache.py  test_env_diagnostics.py
