[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfix"
version = "0.1.19"
description = "Self-healing Python — catches runtime errors, fixes code & dependencies via LLM + MCP"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Tom Sapletta", email = "tom@softreck.dev" },
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
keywords = ["self-healing", "debugging", "llm", "mcp", "auto-fix", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pipreqs>=0.4.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]
git = [
    "gitpython>=3.1.0",
]
watch = [
    "watchdog>=4.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]
all = ["pfix[mcp,git,watch,dev]"]

[project.scripts]
pfix = "pfix.cli:main"

[project.urls]
Homepage = "https://github.com/softreck/pfix"
Repository = "https://github.com/softreck/pfix"
Issues = "https://github.com/softreck/pfix/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pfix"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pfix]
model = "openrouter/anthropic/claude-sonnet-4"
auto_apply = true
auto_install_deps = true
auto_restart = true
max_retries = 3
create_backups = false
git_auto_commit = false
