[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfix"
version = "0.1.67"
description = "Self-healing Python — catches runtime errors, fixes code & dependencies via LLM + MCP"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Tom Sapletta", email = "tom@sapletta.com" },
]
keywords = ["self-healing", "debugging", "llm", "mcp", "auto-fix", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pipreqs>=0.4.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]
git = [
    "gitpython>=3.1.0",
]
watch = [
    "watchdog>=4.0.0",
]
production = [
    "structlog>=24.0.0",
    "tenacity>=8.0.0",
]
cache = [
    "diskcache>=5.6.0",
]
sentry = [
    "sentry-sdk>=2.0",
]
tui = [
    "textual>=0.50",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
]
diagnostics = [
    "psutil>=5.9.0",
]
all = ["pfix[mcp,git,watch,production,cache,sentry,tui,dev,diagnostics]"]

[project.scripts]
pfix = "pfix.cli:main"
pfix-python = "pfix.pfix_python:main"

[project.urls]
Homepage = "https://github.com/softreck/pfix"
Repository = "https://github.com/softreck/pfix"
Issues = "https://github.com/softreck/pfix/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pfix"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pfix]
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = true
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
